CSS fix fixed position for actions on detailpage on smaller screens

--- a/app/frontend/assets/styles/components/_incident-details.scss
+++ b/app/frontend/assets/styles/components/_incident-details.scss
@@ -59,6 +59,7 @@
     }
 
     &.stayFixed {
+        width: 27%;
         @media (min-width: map-get($grid-breakpoints, md)) {
             position: fixed;
             top: 0;
@@ -68,6 +69,9 @@
             transition-property: background-color, border-color;
             transition-duration: $transition-duration-default;
             transition-timing-function: $transition-ease-default;
+        }
+        @media (min-width: map-get($grid-breakpoints, xl)) {
+            width: 100%;
         }
     }
 }
